No, no compiling to TFJS models.
(The main client would be matMul, which is too custom for trivial compilation. And I'm not about to change the language now.)

--- a/tgba/tgba.bib
+++ b/tgba/tgba.bib
@@ -1,3 +1,30 @@
+@misc{zhou2021effective,
+      title={Effective Sparsification of Neural Networks with Global Sparsity Constraint}, 
+      author={Xiao Zhou and Weizhong Zhang and Hang Xu and Tong Zhang},
+      year={2021},
+      eprint={2105.01571},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{schlag2021linear,
+      title={Linear Transformers Are Secretly Fast Weight Memory Systems}, 
+      author={Imanol Schlag and Kazuki Irie and Jürgen Schmidhuber},
+      year={2021},
+      eprint={2102.11174},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG}
+}
+
+@misc{tolstikhin2021mlpmixer,
+      title={MLP-Mixer: An all-MLP Architecture for Vision}, 
+      author={Ilya Tolstikhin and Neil Houlsby and Alexander Kolesnikov and Lucas Beyer and Xiaohua Zhai and Thomas Unterthiner and Jessica Yung and Daniel Keysers and Jakob Uszkoreit and Mario Lucic and Alexey Dosovitskiy},
+      year={2021},
+      eprint={2105.01601},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}
+
 @Article{Dabney2020,
 author={Dabney, Will
 and Kurth-Nelson, Zeb
