`transpose` is more general.

--- a/tgba/tgba.bib
+++ b/tgba/tgba.bib
@@ -1,3 +1,20 @@
+@article{DBLP:journals/corr/Dulac-ArnoldESC15,
+  author    = {Gabriel Dulac{-}Arnold and
+               Richard Evans and
+               Peter Sunehag and
+               Ben Coppin},
+  title     = {Reinforcement Learning in Large Discrete Action Spaces},
+  journal   = {CoRR},
+  volume    = {abs/1512.07679},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1512.07679},
+  archivePrefix = {arXiv},
+  eprint    = {1512.07679},
+  timestamp = {Mon, 27 Jan 2020 16:21:19 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/Dulac-ArnoldESC15.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
 @misc{zhou2021effective,
       title={Effective Sparsification of Neural Networks with Global Sparsity Constraint}, 
       author={Xiao Zhou and Weizhong Zhang and Hang Xu and Tong Zhang},
